fix: bottom navbar spacing

--- a/src/components/BottomNavBar/BottomNavBar.module.scss
+++ b/src/components/BottomNavBar/BottomNavBar.module.scss
@@ -6,7 +6,7 @@
     position: fixed;
     bottom: 0;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     width: 100%;
     height: 8vh;
